trustfall_core/test_data/tests/parse_errors/filter_with_value_of_just_dollar_sign.parse-error.ron
Err(OtherError("Filter argument is empty after \'$\' prefix.", Pos(
  line: 4,
  column: 39,
)))
